# simplesystemmanager

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  README.md  addautostartdialog.cpp  addautostartdialog.hpp  autostart.cpp  ball  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.txt  mainwindow.ui  mainwindow.ui.bak  moc_predefs.h  moron  qtguiinterface.pro  resource_monitor.hpp  services.cpp  services.hpp  systemmanager_plugin_import.cpp  temp_files.cpp  temp_files.hpp  translations.qrc
include/: addautostartdialog.hpp  autostart.hpp  autostart_controller.hpp  config_manager.hpp  fd.cpp  logger.hpp  mainincludes.hpp  mainwindow.h  resource_monitor.hpp  services.hpp  services_controller.hpp  start_new_process_dialog.hpp  task_manager.hpp  taskmanager_controller.hpp  temp_files.hpp  tempfiles_controller.hpp
logs/: Log_09-08-2025.txt
packaging/: SystemManager.desktop  start-manager  start-manager.sh
resources/: dark.qss  haha.qrc  icon.qrc  light.qss  themes.qrc  translations.qrc
src/: addautostartdialog.cpp  autostart.cpp  autostart_controller.cpp  config_manager.cpp  logger.cpp  main.cpp  mainwindow.cpp  resource_monitor.cpp  services.cpp  services_controller.cpp  start_new_process_dialog.cpp  task_manager.cpp  taskmanager_controller.cpp  temp_files.cpp  tempfiles_controller.cpp
translations/: qtguiinterface_en_US.qm  qtguiinterface_en_US.ts  qtguiinterface_pl_PL.qm  qtguiinterface_pl_PL.ts  qtguiinterface_ru_RU.qm  qtguiinterface_ru_RU.ts
